<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vdb2pc</name>
  <version>0.2.0</version>
  <description>Utilities to transform vdb grids into pointclouds</description>
  <maintainer email="lorenzo.ferrini@pal-robotics.com">Anon Ymous</maintainer>
  <license>LGPL-3.0-only</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>libopenvdb-dev</build_depend>
  <build_export_depend>libopenvdb-dev</build_export_depend>

  <exec_depend>libopenvdb</exec_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
